--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -9,7 +9,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "react-scripts": "4.0.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.1.1",
     "web-vitals": "^1.1.2"
@@ -48,6 +47,7 @@
     "eslint-plugin-react": "^7.26.1",
     "jest": "^26.6.0",
     "prettier": "^2.4.1",
+    "react-scripts": "^4.0.3",
     "redux-devtools-extension": "^2.13.9",
     "redux-mock-store": "^1.5.4",
     "webpack-cli": "^4.8.0"
